little fixing, close project

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -25,7 +25,7 @@ OBJ			= $(addprefix $(OBJ_DIR), $(SRC:.c=.o))
 D_FILES		= $(wildcard $(OBJ_DIR)*.d)
 
 CC			= gcc
-CFLAGS		= -Wall -Wextra -Werror -I .
+CFLAGS		= -g -Wall -Wextra -Werror -I .
 
 .PHONY : 	all sub_directory clean fclean re bonus
 
